--- a/texas-blackout.qmd
+++ b/texas-blackout.qmd
@@ -34,6 +34,38 @@ lights_05_16 <- read_stars('data/VNP46A1/VNP46A1.A2021047.h08v05.001.20210480911
 lights_06_16 <- read_stars('data/VNP46A1/VNP46A1.A2021047.h08v06.001.2021048091105.tif')
 ```
 
+```{r}
+# Combine night light data by day using st_mosaic
+
+feb_7_comb <- st_mosaic(lights_05_07, lights_06_07)
+feb_16_comb <- st_mosaic(lights_05_16, lights_06_16)
+
+# Subtract into a new object to show differences
+comb_change <- feb_16_comb - feb_7_comb
+
+# Reclassify data when change is less than a -200 drop (greater than 200 drop) set to 1, if less than 200 drop set as NA
+blackout_vals <- ifelse(comb_change[[1]] < -200, 1, NA)
+
+# Wrap back into stars data
+blackout_sf <- st_as_stars(blackout_vals, dimensions = st_dimensions(comb_change))
+
+# Convert raster to polygons (sf)
+blackout_sf <- st_as_sf(blackout_sf, as_points = FALSE, merge = TRUE, na.rm = TRUE)
+
+# Fix invalid geometries 
+blackout_sf <- st_make_valid(blackout_sf)
+
+# Plot result
+plot(blackout_sf["X"], main = "Vectorized Blackout Areas")
+
+```
+
+
+```{r}
+st_crop(your_sf_object, xmin = your_xmin, xmax = your_xmax, ymin = your_ymin, ymax = your_ymax)
+```
+
+
 ## Roads:
 Road data from Open Street Map redistributed by Geofabriks and prepared for Houston Specific analysis by teaching team
 ```{r}
@@ -62,7 +94,7 @@ homes_sf <- st_read("data/gis_osm_buildings_a_free_1.gpkg",
 ## Socioeconomic
 Socioeconomic data from  U.S. Census Bureau’s American Community Surveys 2019 census tracts
 ```{r}
-#Read in income layer
+#Read in income layere
 socio_sf_inc <- st_read('data/ACS_2019_5YR_TRACT_48_TEXAS.gdb',
                     layer = 'X19_INCOME')
 
