--- a/texas-blackout.qmd
+++ b/texas-blackout.qmd
@@ -6,20 +6,25 @@ date: "11/8/2025"
 editor_options: 
   chunk_output_type: inline
 ---
+
 GitHub repository: https://github.com/lucianbluescher/Texas-impacts-of-extreme-weather.git
 
 # 1. Load required packages
+
 ```{r}
-library(stars) # For working with raster data
-library(sf) # For loading data with SQL query subset
+library(stars)  # For working with raster data
+library(sf)  # For loading data with SQL query subset
+library(tmap)  # For maps
+library(ggplot2)  # For maps
+library(dplyr)
 ```
 
+# 2. Read in all necessary data
 
-# 2. Read in all neccessary data
+## Night Lights:
 
-## Night Lights: 
-NASA VIIRS Houston night time light coverage data from sinusoidal equal-area projection tiles h08v05 and h08v06 on 2021-02-07 and 2021-02-16
-Key: lights_TILE_DAY
+NASA VIIRS Houston night time light coverage data from sinusoidal equal-area projection tiles h08v05 and h08v06 on 2021-02-07 and 2021-02-16 Key: lights_TILE_DAY
+
 ```{r}
 # tile h08v05, collected on 2021-02-07 (VNP1038)
 lights_05_07 <- read_stars('data/VNP46A1/VNP46A1.A2021038.h08v05.001.2021039064328.tif')
@@ -35,7 +40,9 @@ lights_06_16 <- read_stars('data/VNP46A1/VNP46A1.A2021047.h08v06.001.20210480911
 ```
 
 ## Roads:
+
 Road data from Open Street Map redistributed by Geofabriks and prepared for Houston Specific analysis by teaching team
+
 ```{r}
 # Read road data using SQL query specifying highways only
 roads_sf <- st_read( "data/gis_osm_roads_free_1.gpkg", 
@@ -45,7 +52,8 @@ roads_sf <- st_read( "data/gis_osm_roads_free_1.gpkg",
 )
 ```
 
-## Houses
+## Houses:
+
 House data also from Open Street Map redistributed by Geofabriks and prepared for Houston Specific analysis by teaching team
 
 ```{r}
@@ -59,26 +67,33 @@ homes_sf <- st_read("data/gis_osm_buildings_a_free_1.gpkg",
 )
 ```
 
-## Socioeconomic
-Socioeconomic data from  U.S. Census Bureau’s American Community Surveys 2019 census tracts
+## Socioeconomic:
+
+Socioeconomic data from U.S. Census Bureau’s American Community Surveys 2019 census tracts
+
 ```{r}
-#Read in income layere
+#Read in income layer
 socio_sf_inc <- st_read('data/ACS_2019_5YR_TRACT_48_TEXAS.gdb',
                     layer = 'X19_INCOME')
 
+# Read in race layer
+socio_sf_race <- st_read('data/ACS_2019_5YR_TRACT_48_TEXAS.gdb',
+                         layer = 'X02_RACE')
 # Read in geometry layer
 socio_sf_geo <- st_read('data/ACS_2019_5YR_TRACT_48_TEXAS.gdb',
                     layer = 'ACS_2019_5YR_TRACT_48_TEXAS')
 
-# Read in Another layer of socioeconomic information
+
 ```
 
 ```{r}
 st_layers(dsn = 'data/ACS_2019_5YR_TRACT_48_TEXAS.gdb')
 ```
 
+# 3. Workflow
 
-# 3. Creating Blackout Mask
+## Create Blackout Mask
+
 ```{r}
 # Combine night light data by day using st_mosaic
 
@@ -101,7 +116,7 @@ blackout_sf <- st_as_sf(blackout_sf, as_points = FALSE, merge = TRUE, na.rm = TR
 blackout_sf <- st_make_valid(blackout_sf)
 
 # Set bounding box of Houston Area from given coordinates 
-houston_bbox <- st_bbox(c(xmin = -96.5, xmax = -94.5, ymin = 29, ymax = 30.5))
+houston_bbox <- st_bbox(c(xmin = -96.5, xmax = -94.5, ymin = 29, ymax = 30.5), crs = 4326)
 
 # Crop SF by set bbox
 blackout_sf <- st_crop(blackout_sf, houston_bbox)
@@ -109,12 +124,9 @@ blackout_sf <- st_crop(blackout_sf, houston_bbox)
 # Transform CRS of sf to EPSG:3083 (NAD83 / Texas Centric Albers Equal Area)
 blackout_sf <- st_transform(x = blackout_sf, crs = 3083)
 
-# Plot result
-plot(blackout_sf["X"], main = "Vectorized Blackout Areas")
-
 ```
 
-# 4. Excluding Highways from blackout mask
+## Exclude Highways from blackout mask
 
 ```{r}
 # Set CRS 
@@ -142,31 +154,193 @@ road_buffer <- st_union(road_buffer)
 
 # Remove points from blackout_sf that are within the 200m buffer around roads
 blackout_dif <- st_difference(x = blackout_sf, y = road_buffer)
-
-# Use st_intersection to remove overlap buffer onto house data
-#roads_sf_buffer_intersect <- st_intersection(blackout_sf, road_buffer)
-
-# Use st_union to combine the roads sf and the buffer
-#roads_sf_buffer_union <- st_union(blackout_sf, road_buffer)
-
-plot(blackout_dif)
 ```
 
-# 5. Identify the number of homes likely impacted by blackouts
+# 4. Outputs
+
+## Night light intensities before and after the first two storms
 
 ```{r}
-# Set CRS of homes
+st_crs(feb_7_comb)
+st_crs(feb_16_comb)
+
+# Transform the mosaics to geographic CRS
+feb_7_geo <- st_warp(feb_7_comb, crs = 4326)  # WGS84
+feb_16_geo <- st_warp(feb_16_comb, crs = 4326)
+
+# Set to Houston area bounding box
+feb_7_houston <- st_crop(feb_7_geo, houston_bbox)
+feb_16_houston <- st_crop(feb_16_geo, houston_bbox)
+
+# Transform to Texas Centric Albers Equal Area for analysis
+feb_7_houston <- st_transform(feb_7_houston, crs = 3083)
+feb_16_houston <- st_transform(feb_16_houston, crs = 3083)
+
+# Calculate difference
+light_change <- feb_16_houston - feb_7_houston
+```
+
+```{r}
+par(mfrow = c(1, 2))
+plot(feb_7_houston, main = "Before Storm (Feb 7, 2021)", reset = FALSE)
+plot(feb_16_houston, main = "After Storm (Feb 16, 2021)", reset = FALSE)
+par(mfrow = c(1, 1))
+
+```
+
+```{r}
+# Plot change in light from Feb 7th to Feb 16th
+compare_plot <- plot(light_change, main = "Change in light from Feb 7th to Feb 16th", reset = FALSE)
+```
+
+## Map of the homes in Houston that lost power
+
+```{r}
+tm_shape(blackout_sf, name = "Blackout Areas") +
+  tm_polygons(col = "red", fill_alpha = 0.5, border.col = "darkred") +
+tm_shape(roads_sf, name = "Streets") +
+  tm_lines(col = "grey", lwd = 0.5, col_alpha = 0.5) +
+tm_basemap("OpenStreetMap") +
+tm_layout(legend.outside = TRUE) +
+tm_title("Houston homes that lost power")
+```
+
+## Number of homes in Houston that lost power
+
+```{r}
+# Check CRS of homes
 if (st_crs(homes_sf)$epsg != 3083) {
   warning("CRS is not EPSG:3083 — transforming to EPSG:3083.")
   homes_sf <- st_transform(homes_sf, crs = 3083)
 } else {
   message("CRS is already EPSG:3083.")
 }
+```
 
-# Check which homes intersect the combined blackout area and subset intersected homes based on boolean
-blackout_homes <- homes_sf[lengths(st_intersects(homes_sf, blackout_dif)) > 0, ]
+```{r}
+# Total number of homes
+total_homes <- nrow(homes_sf)
 
-nrow(blackout_homes)  # number of homes in blackout areas
+# Number of homes in blackout area
+num_blackout <- nrow(blackout_vals)
 
+# Number of homes NOT in blackout area
+num_no_blackout <- total_homes - num_blackout
 
+# Percentage affected
+pct_blackout <- num_blackout / total_homes * 100
+pct_no_blackout <- 100 - pct_blackout
+
+# Print summary
+cat("Total homes:", total_homes, "\n")
+cat("Homes in blackout areas:", num_blackout, sprintf("(%.1f%%)", pct_blackout), "\n")
+cat("Homes not in blackout areas:", num_no_blackout, sprintf("(%.1f%%)", pct_no_blackout), "\n")
+
+```
+
+## Map of the census tracts in Houston that lost power
+
+```{r}
+# Join income and race data with geometry
+houston_tracts_inc <- socio_sf_geo |> 
+  left_join(socio_sf_inc, by = c("GEOID_Data" = "GEOID"))
+
+houston_tracts_race <- socio_sf_geo |> 
+  left_join(socio_sf_race, by = c("GEOID_Data" = "GEOID"))
+
+# Transform to EPSG:3083
+houston_tracts_inc <- st_transform(houston_tracts_inc, crs = 3083)
+houston_tracts_race <- st_transform(houston_tracts_race, crs = 3083)
+
+# Crop to Houston area
+houston_bbox <- st_bbox(blackout_sf)
+houston_tracts_inc <- st_crop(houston_tracts_inc, houston_bbox)
+houston_tracts_race <- st_crop(houston_tracts_race, houston_bbox)
+
+# Identify which census tracts experienced blackouts
+tracts_with_blackout <- st_intersects(houston_tracts_inc, blackout_sf, sparse = FALSE)
+houston_tracts_inc$blackout <- rowSums(tracts_with_blackout) > 0
+
+```
+
+```{r}
+# Define low income (e.g., below median)
+median_income_threshold <- median(houston_tracts_inc$B19013e1, na.rm = TRUE)
+houston_tracts_inc$low_income <- houston_tracts_inc$B19013e1 < median_income_threshold
+
+# Create map showing both income and blackout status
+ggplot() +
+  # Show all tracts colored by income level
+  geom_sf(data = houston_tracts_inc, aes(fill = low_income), color = "white", size = 0.1) +
+  # Overlay blackout areas with red outline
+  geom_sf(data = blackout_sf, fill = NA, color = "red", size = 0.5, alpha = 0.7) +
+  scale_fill_manual(values = c("FALSE" = "lightblue", "TRUE" = "darkblue"),
+                    labels = c("Higher Income", "Lower Income"),
+                    name = "Income Level") +
+  theme_minimal() +
+  labs(title = "Low Income Census Tracts and Blackout Areas",
+       subtitle = "Red outline shows areas that lost power in February 2021",
+       caption = "Lower income defined as below median household income") +
+  theme(axis.text = element_blank(),
+        axis.ticks = element_blank(),
+        panel.grid = element_blank())
+```
+
+##  Plot comparison of the distributions of median household income for census tracts that did and did not experience blackouts
+
+```{r}
+# Identify blackouts in low income census tracts
+tracts_with_blackout <- st_intersects(houston_tracts_inc, blackout_sf, sparse = FALSE)
+houston_tracts_inc$blackout <- rowSums(tracts_with_blackout) > 0
+
+# Create the plot
+income_data <- houston_tracts_inc |> 
+  st_drop_geometry() |> 
+  select(blackout, B19013e1) |> 
+  rename(median_income = B19013e1) |> 
+  filter(!is.na(blackout), !is.na(median_income), median_income > 0) |> 
+  mutate(blackout_status = factor(blackout, 
+                                  levels = c(FALSE, TRUE),
+                                  labels = c("No Power Loss", "Power Loss")))
+
+ggplot(income_data, aes(x = median_income, fill = blackout_status)) +
+  geom_histogram(alpha = 0.6, position = "identity", bins = 30) +
+  scale_fill_manual(values = c("No Power Loss" = "black", "Power Loss" = "red"),
+                    name = "Blackout Status") +
+  labs(title = "Distribution of Median Household Income by Blackout Status",
+       subtitle = "Houston Census Tracts, February 2021",
+       x = "Median Household Income",
+       y = "Number of Census Tracts") +
+  theme_minimal() +
+  scale_x_continuous(labels = scales::dollar_format())
+```
+
+```{r}
+# Identify blackouts in census tracts
+tracts_with_blackout <- st_intersects(houston_tracts_race, blackout_sf, sparse = FALSE)
+houston_tracts_race$blackout <- rowSums(tracts_with_blackout) > 0
+
+# B02001e1 is total population
+# B02001e2 is White alone
+# Calculate percent white for comparison
+houston_tracts_race$pct_white <- (houston_tracts_race$B02001e2 / houston_tracts_race$B02001e1) * 100
+
+# Create the plot
+race_data <- houston_tracts_race |> 
+  st_drop_geometry() |> 
+  select(blackout, pct_white) |> 
+  filter(!is.na(blackout), !is.na(pct_white), pct_white >= 0) |> 
+  mutate(blackout_status = factor(blackout, 
+                                  levels = c(FALSE, TRUE),
+                                  labels = c("No Power Loss", "Power Loss")))
+
+ggplot(race_data, aes(x = pct_white, fill = blackout_status)) +
+  geom_histogram(alpha = 0.6, position = "identity", bins = 30) +
+  scale_fill_manual(values = c("Power Loss" = "red", "No Power Loss" = "black"),
+                    name = "Blackout Status") +
+  labs(title = "Distribution of Percent White Population by Blackout Status",
+       subtitle = "Houston Census Tracts, February 2021",
+       x = "Percent White (%)",
+       y = "Number of Census Tracts") +
+  theme_minimal()
 ```
