--- a/texas-blackout.qmd
+++ b/texas-blackout.qmd
@@ -9,7 +9,7 @@ editor_options:
 
 GitHub repository: https://github.com/lucianbluescher/Texas-impacts-of-extreme-weather.git
 
-![](images/clipboard-747670850.png)
+![](images/clipboard-1352269323.png)
 
 # 1. Load required packages
 
@@ -20,6 +20,8 @@ library(sf)  # For loading data with SQL query subset
 library(tmap)  # For maps
 library(ggplot2)  # For maps
 library(dplyr)
+library(ggspatial) # compass and scalebar to ggplot
+library(viridis) # Cool colors 
 ```
 
 # 2. Read in all necessary data
@@ -103,6 +105,7 @@ socio_sf_geo <- st_read('data/ACS_2019_5YR_TRACT_48_TEXAS.gdb',
 feb_7_comb <- st_mosaic(lights_05_07, lights_06_07)
 feb_16_comb <- st_mosaic(lights_05_16, lights_06_16)
 
+rm(lights_05_07, lights_05_16, lights_06_07, lights_06_16)
 # Subtract into a new object to show differences
 comb_change <- feb_16_comb - feb_7_comb
 
@@ -184,15 +187,46 @@ feb_16_houston <- st_transform(feb_16_houston, crs = 3083)
 light_change <- feb_16_houston - feb_7_houston
 ```
 
-```{r}
-par(mfrow = c(1, 2))
-plot(feb_7_houston, main = "Before Storm (Feb 7, 2021)", reset = FALSE)
-plot(feb_16_houston, main = "After Storm (Feb 16, 2021)", reset = FALSE)
-par(mfrow = c(1, 1))
+## Create map showing before and after storm
 
+```{r}
+# Create function to apply log to radiance in order to dramatize color difference
+log_raster <- function(st) {
+  out <- st_apply(st, c("x", "y"), log1p)
+  names(out) <- "log_radiance"
+  out
+}
+
+# Apply function
+feb_7_log  <- log_raster(feb_7_houston)
+feb_16_log <- log_raster(feb_16_houston)
+
+# Create stacked raster
+stacked <- c(feb_7_log, feb_16_log, along = "time")
+stacked <- st_set_dimensions(stacked, "time",
+                             values = c("Before Storm (Feb 7, 2021)",
+                                       "After Storm (Feb 16, 2021)"))
+# Map
+tm_shape(stacked) +
+  tm_raster(
+    col        = "log_radiance",
+    col.scale  = tm_scale_continuous(values = viridis::magma(120, direction = -1)),
+    col.legend = tm_legend(title = "Radiance")
+  ) +
+  tm_facets(by = "time", ncol = 2) +
+  tm_title("Houston Blackouts, Before vs. After the February Storm") +
+  tm_layout(
+    legend.position = c("right", "center"),
+    legend.outside = TRUE   
+  ) +
+  tm_scalebar(position = c("left", "bottom")) +
+  tm_compass(type = "arrow",
+             position = c("top", "left"))
 ```
 
 ```{r}
+#| eval: false
+#| include: false
 # Plot change in light from Feb 7th to Feb 16th
 compare_plot <- plot(light_change, main = "Change in light from Feb 7th to Feb 16th", reset = FALSE)
 ```
@@ -200,17 +234,38 @@ compare_plot <- plot(light_change, main = "Change in light from Feb 7th to Feb 1
 ## Map of the homes in Houston that lost power
 
 ```{r}
-tm_shape(blackout_sf, name = "Blackout Areas") +
-  tm_polygons(col = "red", fill_alpha = 0.5) +
-tm_shape(roads_sf, name = "Streets") +
-  tm_lines(col = "grey", lwd = 0.5, col_alpha = 0.5) +
-tm_basemap("OpenStreetMap") +
+# Map homes in Houston that lost power
+tm_shape(blackout_sf) + # Add blacked out homes
+  tm_polygons(
+    fill = "red",
+    fill_alpha = 0.5
+  ) +
+tm_shape(roads_sf) + # Add roads
+  tm_lines(
+    col = "grey",
+    lwd = 0.5,
+    col_alpha = 0.5
+  ) +
+tm_basemap("OpenStreetMap") + # Add base map
+tm_add_legend(
+  type = "polygons",
+  labels = "Homes",
+  fill = "red",
+  title = "Legend"
+) +
+tm_add_legend( 
+  type = "lines",
+  labels = "Streets",
+  lwd = 1
+) +
+tm_title("Houston homes that lost power") +
 tm_layout(legend.outside = TRUE) +
-tm_title("Houston homes that lost power")
-  
+tm_compass(position = c("right", "bottom")) +
+tm_scalebar(position = c("left", "bottom"))
+
 ```
 
-## Number of homes in Houston that lost power
+## FInd total number of homes in Houston that lost power
 
 ```{r}
 # Check CRS of homes
@@ -245,7 +300,9 @@ cat("Homes not in blackout areas:", num_no_blackout, sprintf("(%.1f%%)", pct_no_
 
 ```
 
-## Map of the census tracts in Houston that lost power
+# Map of the census tracts in Houston that lost power
+
+## Preparing census tract data
 
 ```{r}
 #| warning: false
@@ -269,31 +326,64 @@ houston_tracts_race <- st_crop(houston_tracts_race, houston_bbox)
 tracts_with_blackout <- st_intersects(houston_tracts_inc, blackout_sf, sparse = FALSE)
 houston_tracts_inc$blackout <- rowSums(tracts_with_blackout) > 0
 
-```
 
-```{r}
 # Define low income (e.g., below median)
 median_income_threshold <- median(houston_tracts_inc$B19013e1, na.rm = TRUE)
 houston_tracts_inc$low_income <- houston_tracts_inc$B19013e1 < median_income_threshold
 
-# Create map showing both income and blackout status
-ggplot() +
-  # Show all tracts colored by income level
-  geom_sf(data = houston_tracts_inc, aes(fill = low_income), color = "white", size = 0.1) +
-  geom_sf(data = blackout_sf, fill = NA, color = "red", size = 0.5, alpha = 0.7) +
-  scale_fill_manual(values = c("FALSE" = "lightblue", "TRUE" = "darkblue"),
-                    labels = c("Higher Income", "Lower Income"),
-                    name = "Income Level") +
-  theme_minimal() +
-  labs(title = "Low Income Census Tracts and Blackout Areas",
-       subtitle = "Red outline shows areas that lost power in February 2021",
-       caption = "Lower income defined as below median household income") +
-  theme(axis.text = element_blank(),
-        axis.ticks = element_blank(),
-        panel.grid = element_blank())
+# First make sure low_income is a factor with proper labels
+houston_tracts_inc <- houston_tracts_inc %>%
+  mutate(low_income = factor(low_income, 
+                             levels = c(FALSE, TRUE),
+                             labels = c("Higher Income","Lower Income")))
 ```
 
-##  Plot comparison of the distributions of median household income for census tracts that did and did not experience blackouts
+## Mapping blackout status on top of income status
+
+```{r}
+# Create map showing both income and blackout status
+
+tm_shape(houston_tracts_inc) + # Add census tracts
+  tm_polygons(
+    fill = "low_income",
+    fill.scale = tm_scale_categorical(values = c("lightgreen", "darkgreen")),
+    fill.legend = tm_legend(title = "Income Level"),
+    col = "white",
+    lwd = 0.1
+  ) +
+  
+tm_shape(blackout_sf) + # Add blackout homes
+  tm_polygons(
+    fill = NA,
+    col = "red",
+    lwd = 0.5
+  ) +
+tm_title("Low Income Census Tracts and Blackout Areas", 
+         bg.color = "white",
+         position = tm_pos_out("center", "top")) +
+tm_layout(
+  legend.outside = TRUE,
+  legend.outside.position = "right",
+  outer.margins = 0.02
+) +
+tm_credits(
+  "Red outline shows areas that lost power in February 2021",
+  bg.color = "white",
+  position = tm_pos_out("center", "bottom"),
+  size = 0.7
+) +
+tm_compass(
+  position = tm_pos_in("left", "bottom"),
+  size = 2
+) +
+tm_scalebar(
+  position = tm_pos_in("right", "bottom")
+)
+```
+
+# Plot comparison of the distributions of median household income for census tracts that did and did not experience blackouts
+
+## Median household income
 
 ```{r}
 # Identify blackouts in low income census tracts
@@ -321,6 +411,8 @@ ggplot(income_data, aes(x = median_income, fill = blackout_status)) +
   theme_minimal() +
   scale_x_continuous(labels = scales::dollar_format())
 ```
+
+## Percent white
 
 ```{r}
 # Identify blackouts in census tracts
